--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,7 +69,7 @@
         <item name="android:layout_height">40px</item>
         <item name="android:layout_width">160dp</item>
         <item name="android:textColor">#000000</item>
-        <item name="android:textSize">12pt</item>
+        <item name="android:textSize">10pt</item>
         <item name="android:paddingLeft">30px</item>
         <item name="android:gravity">center_vertical</item>
     </style>
@@ -89,14 +89,15 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">8pt</item>
         <item name="android:paddingLeft">3px</item>
-        <item name="android:gravity">center_vertical</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
     <style name="table_item_body">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">0sp</item>
         <item name="android:layout_weight">0.33</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#5b5b5b</item>
         <item name="android:textSize">8pt</item>
         <item name="android:layout_marginBottom">3sp</item>
         <item name="android:layout_marginTop">3sp</item>
@@ -154,14 +155,24 @@
         <item name="android:textColor">#4d4d4d</item>
     </style>
 
-    <style name="prod_legend">
+    <style name="prod_legend_item">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:layout_weight">0.89</item>
+        <item name="android:layout_weight">0.2</item>
         <item name="android:layout_margin">6dp</item>
-        <item name="android:paddingLeft">7dp</item>
         <item name="android:textSize">7pt</item>
         <item name="android:textColor">#000000</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="prod_legend_label">
+        <item name="android:layout_width">0sp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_weight">0.8</item>
+        <item name="android:layout_margin">6dp</item>
+        <item name="android:textSize">7pt</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
     <style name="popupMainLayout">
