--- a/app/src/main/res/layout/fragment_day_consumption.xml
+++ b/app/src/main/res/layout/fragment_day_consumption.xml
@@ -79,7 +79,7 @@
                         android:layout_marginBottom="10sp"
                         android:layout_height="wrap_content"
                         android:text="Compare with:"
-                        android:textColor="#000000"
+                        android:textColor="#FF0000"
                         />
                     <TableLayout
                         android:layout_width="wrap_content"
