--- a/app/src/main/res/layout/energy_production_view.xml
+++ b/app/src/main/res/layout/energy_production_view.xml
@@ -132,7 +132,7 @@
             android:background="@color/bg_color"
             android:orientation="vertical" >
 
-            <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+            <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
@@ -163,11 +163,11 @@
                     android:background="@color/solar_color" >
                 </LinearLayout>
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     style="@style/prod_legend_label"
                     android:text="E. Solar" />
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     android:id="@+id/solar_precent"
                     style="@style/prod_legend_item"
                     android:gravity="right"
@@ -193,11 +193,11 @@
                     android:background="@color/water_color" >
                 </LinearLayout>
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     style="@style/prod_legend_label"
                     android:text="E. Hidrica" />
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     android:id="@+id/water_precent"
                     style="@style/prod_legend_item"
                     android:gravity="right"
@@ -223,11 +223,11 @@
                     android:background="@color/wind_color" >
                 </LinearLayout>
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     style="@style/prod_legend_label"
                     android:text="E. Eólica" />
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     android:id="@+id/wind_precent"
                     style="@style/prod_legend_item"
                     android:gravity="right"
@@ -253,11 +253,11 @@
                     android:background="@color/temar_color" >
                 </LinearLayout>
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     style="@style/prod_legend_label"
                     android:text="E. Térmica" />
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     android:id="@+id/termal_precent"
                     style="@style/prod_legend_item"
                     android:gravity="right"
@@ -273,7 +273,7 @@
                 >
             </LinearLayout>
 
-            <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+            <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="4dp"
@@ -312,7 +312,7 @@
                         android:text="--"
                         android:textColor="#000000"
                         android:textSize="8pt" />
-                    <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                    <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -343,7 +343,7 @@
                         android:text="--"
                         android:textColor="#000000"
                         android:textSize="8pt" />
-                     <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                     <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -374,7 +374,7 @@
                         android:text="--"
                         android:textColor="#000000"
                         android:textSize="8pt" />
-                    <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                    <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
