--- a/app/src/main/res/layout/day_view.xml
+++ b/app/src/main/res/layout/day_view.xml
@@ -154,7 +154,7 @@
                     android:text=" &lt; " >
                 </Button>
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     android:id="@+id/date_label_day"
                     style="@style/text_box_date"
                     android:text="06/03/2012"
@@ -276,13 +276,13 @@
                         android:layout_weight="0.25"
                         android:orientation="vertical" >
 
-                        <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                        <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                             android:id="@+id/total_consump_day"
                             style="@style/summary_table_item"
                             android:text="18"
                             android:textSize="18px" />
 
-                        <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                        <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                             style="@style/summary_table_item"
                             android:text="Kwh"
                             android:textSize="12px" />
@@ -293,13 +293,13 @@
                         android:layout_weight="0.25"
                         android:orientation="vertical" >
 
-                        <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                        <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                             android:id="@+id/total_co2_day"
                             style="@style/summary_table_item"
                             android:text="0.4 g CO2"
                             android:textSize="18px" />
 
-                        <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                        <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                             style="@style/summary_table_item"
                             android:text="gC02"
                             android:textSize="12px" />
@@ -310,13 +310,13 @@
                         android:layout_weight="0.25"
                         android:orientation="vertical" >
 
-                        <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                        <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                             android:id="@+id/total_money_day"
                             style="@style/summary_table_item"
                             android:text="5.4€"
                             android:textSize="18px" />
 
-                        <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                        <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                             style="@style/summary_table_item"
                             android:text="€"
                             android:textSize="12px" />
@@ -327,7 +327,7 @@
                         android:layout_weight="0.25"
                         android:orientation="vertical" >
 
-                        <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                        <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                             android:id="@+id/peak_consump_day"
                             style="@style/summary_table_item"
                             android:text=" 12:00 "
@@ -358,7 +358,7 @@
                     android:src="@drawable/compare_icon" >
                 </ImageView>
 
-                <android.prsma.org.energyspectrum.dtos.TextView_Roboto
+                <android.prsma.org.energyspectrum.customUI.TextView_Roboto
                     style="@style/text_box_date"
                     android:text=" Comparação:"
                     android:textSize="21px" />
