--- a/app/src/main/res/layout/fragment_day_consumption.xml
+++ b/app/src/main/res/layout/fragment_day_consumption.xml
@@ -79,7 +79,7 @@
                         android:layout_marginBottom="10sp"
                         android:layout_height="wrap_content"
                         android:text="Compare with:"
-                        android:textColor="#FF0000"
+                        android:textColor="#000000"
                         />
                     <TableLayout
                         android:layout_width="wrap_content"
@@ -166,6 +166,18 @@
                                     android:id="@+id/checkbox_5day"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+                                <ProgressBar
+                                    android:id="@+id/frag_day_loading_bar"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:indeterminate="true"
+                                    android:visibility="gone"/>
                             </LinearLayout>
                         </TableRow>
                     </TableLayout>
