--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -46,7 +46,8 @@
 
                         <TextView
                             android:id="@+id/frag_current_cons_label"
-                            style="@style/table_item_value"
+                            style="@style/table_item_label"
+                            android:gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:background="@drawable/main_bg1"
                             android:paddingLeft="10dp"
@@ -93,12 +94,19 @@
                             android:text=" Current VS Past"
                             android:textColor="#000000"
                              />
-
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="0.1"/>
                         <android.prsma.org.energyspectrum.customUI.SummaryComparisonWidget
                             android:id="@+id/frag_summaryCompWidget"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
-                            android:layout_weight="0.8"/>
+                            android:layout_weight="0.7"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="0.3"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
