--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,6 +72,7 @@
         <item name="android:textSize">10pt</item>
         <item name="android:paddingLeft">30px</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_marginTop">5sp</item>
     </style>
 
 
