--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -7,4 +7,8 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:orderInCategory="100"
+        android:title="Appliance Icons retrieved from FlatIcons"
+        app:showAsAction="never" />
 </menu>
