--- a/app/src/main/res/layout/event_item_layout.xml
+++ b/app/src/main/res/layout/event_item_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -18,7 +18,7 @@
         android:id="@+id/event_list_label"
         android:layout_width="0sp"
         android:layout_weight="0.8"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:textAppearance="?attr/textAppearanceListItem"
         android:text="EVENT EXAMPLE"/>
